<resources>
    <string name="app_name">TestEcommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desktop">Desktop</string>
    <string name="laptop">Laptop</string>
    <string name="phone">Phone</string>
    <string name="headphone">Headphone</string>
    <string name="all">All</string>
    <string name="welcome">Welcome</string>
    <string name="oguzhan_ozgokce">Oguzhan OZGOKCE</string>
    <string name="search">Search</string>
    <string name="discount_20_for_n_headphones">Discount 20% For\n Headphones</string>
    <string name="buy_now">Buy now</string>
    <string name="categoris">Categoris</string>
    <string name="popular_product">All Product</string>
    <string name="see_all">See All</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price</string>
    <string name="rating">Rating</string>
    <string name="salesperson">SalesPerson</string>
    <string name="favoritesTitle">My Favorites</string>
    <string name="my_cart">My Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">SubTotal</string>
    <string name="delivery">Delivery</string>
    <string name="_0_00">$0.00</string>
    <string name="total">Total</string>
    <string name="your_delivery_address">Your Delivery Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_now">Order Now</string>
    <string name="cash">Cash</string>
    <string name="Istabul_bakirkoy_419_sok_6_2">İstabul Bakirkoy 419.sok 6/2</string>
    <string name="total_tax">Total Tax</string>
    <string name="customer_name">Customer Name</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="enter_your_login_credentials">Enter your login credentials</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="my_favorites">My Favorites</string>
</resources>