<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorites" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cartFragment"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>