<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_image"
    tools:context=".login.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:background="@drawable/profile_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gray_two_background"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_usernameID"
                android:background="@drawable/white_background3"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints="" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_passwordID"
                android:background="@drawable/white_background3"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:autofillHints="" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_buttonID"
                android:text="@string/login"
                android:background="@drawable/white_background3"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/enter_your_login_credentials"
                android:backgroundTint="@color/purple" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/login_signupTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/not_yet_registered_signup_now"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:layout_marginBottom="20dp"/>


</LinearLayout>